$Id: History,v 1.4 1999-05-31 17:38:37 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

May 29, 1999: John Allison
- Added electromagnetic/lowenergy to GNUmakefile and
  electromagnetic/GNUmakefile..

Dec 09: J.P.Wellisch
-hadronics tagged.

Sep 25: H.Kurashige.
- procman-00-02-05 has tagged 
    Added deleteion of all processes  in the destructor of G4ProcessTable
Aug 27: HP Wellisch.
- collected the fixes in a  new processes-tag; trying Harm's improved code.
The following in  included:
decay - pro-00-02-01
electromagnetic - em-00-02-02
  standard/src/G4GammaConversion.cc - head
  xrays/include/G4Cerenkov.hh - head
  xrays/src/G4Cerenkov.cc - head
management - procman-00-02-04
optical - head
parameterisation - param-00-02-03
transportation - pro-00-02-01
  src/G4Transportation.cc - head
  src/G4UserSpecialCuts.cc - head
hadronic/cross_sections - pro-00-02-01
hadronic/management - pro-00-02-01
  include/G4HadronicInteraction.hh - head
  src/G4HadronInelasticProcess.cc - head
hadronic/processes - pro-00-02-01
hadronic/stopping - pro-00-02-01
  include/G4PiMinusAbsorptionAtRest.hh - head
hadronic/util - pro-00-02-01
  src/G4LightMedia.cc - head
  src/G4Nucleus.cc - head